--- a/app/src/debug/res/values/ic_launcher_background.xml
+++ b/app/src/debug/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#15A3A3</color>
+    <color name="ic_launcher_background">#B3B514</color>
 </resources>
